--- a/src/app/_styles/scss/_common.scss
+++ b/src/app/_styles/scss/_common.scss
@@ -435,6 +435,7 @@ link
         width: 40px;
         height: 40px;
         background-color: $accent;
+        border: 1px solid transparent;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -442,6 +443,7 @@ link
 
         &.mil-light {
             background-color: $light;
+            border-color: #fff;
         }
     }
 
